# Multi-Agent-Pose-Uncertainty

./: CITATION.cff  LICENSE  README.md  pyproject.toml
crb/: __init__.py  fim.py  jacobians.py  multiagent.py  se3.py  selection.py  utils.py
crb/rendering/: renderer_api.py  toy_renderer.py
docs/: api.md  methodology.md
tests/: test_fim.py  test_multiagent.py  test_se3.py  test_selection.py
